[Ankit] Image click applyed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
         {{message}}
     </h2>
     <div class="image">
-        <img [src]="imageUrl" alt="Ankit">
+        <img [src]="imageUrl" alt="Ankit" (click)="onClick()" >
     </div>
 </div>
